Criando página de login

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     git add .
     git commit. -m 'Criando página de login'
     git push
+
+    git config user.name "Rvnaza"
+    git config user.email "marretarvn@gmail.com"
     
 </body>
 </html>
