--- a/index.html
+++ b/index.html
@@ -3,16 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Mugiwara</title>
 </head>
 <body>
-    <h1>Login</h1>
-    git add .
+    <div id="container">
+        <label for="username">Insert you login</label>
+        <input id="username" type="text"><br>
+        <label for="password">Insert you password</label>
+        <input id="password" type="text"><br>
+        <button onclick="button1()">Entrar</button>
+    </div>
+    <!-- git add .
     git commit. -m 'Criando página de login'
     git push
 
     git config user.name "Rvnaza"
-    git config user.email "marretarvn@gmail.com"
-    
+    git config user.email "marretarvn@gmail.com" -->
+
 </body>
 </html>
